--- a/uicomponent/src/main/res/values/attrs.xml
+++ b/uicomponent/src/main/res/values/attrs.xml
@@ -34,14 +34,14 @@
         <attr name="form_bottom_line_color" format="color" />
         <attr name="form_bottom_line_gone" format="boolean" />
         <attr name="form_edit_hint" format="string" />
-        <attr name="form_edit_input_enable" format="boolean"/>
+        <attr name="form_edit_input_enable" format="boolean" />
         <attr name="form_edit_hint_color" format="color" />
         <attr name="form_edit_text_size" format="dimension" />
         <attr name="form_edit_text_color" format="color" />
-        <attr name="form_edit_text" format="string"/>
+        <attr name="form_edit_text" format="string" />
         <attr name="form_edit_text_style" format="enum">
-            <enum name="BOLD" value="1"/>
-            <enum name="NORMAL" value="0"/>
+            <enum name="BOLD" value="1" />
+            <enum name="NORMAL" value="0" />
         </attr>
         <attr name="form_edit_max_length" format="integer" />
         <attr name="form_background_color" format="color" />
@@ -49,6 +49,31 @@
             <enum name="TYPE_CLASS_NUMBER" value="0x00000002" />
             <enum name="TYPE_CLASS_PHONE" value="0x00000003" />
             <enum name="TYPE_NUMBER_FLAG_DECIMAL" value="0x00002000" />
+        </attr>
+    </declare-styleable>
+
+    <declare-styleable name="ShapeTextView">
+        <attr name="shape" format="integer">
+            <enum name="RECTANGLE" value="0" />
+            <enum name="OVAL" value="1" />
+        </attr>
+        <attr name="shapeRadius" format="dimension" />
+        <attr name="shapeTopLeftRadius" format="dimension" />
+        <attr name="shapeTopRightRadius" format="dimension" />
+        <attr name="shapeBottomLeftRadius" format="dimension" />
+        <attr name="shapeBottomRightRadius" format="dimension" />
+        <attr name="shapeStrokeWidth" format="dimension" />
+        <attr name="shapeSolidColor" format="color" />
+        <attr name="shapeStrokeColor" format="color" />
+        <attr name="shapeStrokeStartColor" format="color" />
+        <attr name="shapeStrokeEndColor" format="color" />
+        <attr name="shapeStartColor" format="color" />
+        <attr name="shapeEndColor" format="color" />
+        <attr name="shapeColorOrientation" format="integer">
+            <enum name="TOP_BOTTOM" value="0" />
+            <enum name="RIGHT_LEFT" value="2" />
+            <enum name="BOTTOM_TOP" value="4" />
+            <enum name="LEFT_RIGHT" value="6" />
         </attr>
     </declare-styleable>
 
