--- a/uicomponent/src/main/res/values/attrs.xml
+++ b/uicomponent/src/main/res/values/attrs.xml
@@ -77,5 +77,9 @@
         </attr>
     </declare-styleable>
 
+    <declare-styleable name="RotateTextView">
+        <attr name="rt_degrees" format="integer" />
+    </declare-styleable>
+
 
 </resources>
