formview增加多行显示属性

--- a/app/src/main/res/layout/activity_form_view_example.xml
+++ b/app/src/main/res/layout/activity_form_view_example.xml
@@ -42,10 +42,11 @@
         android:layout_marginTop="10dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        app:form_name_marginTop="14dp"
         app:form_name="推流平台"
         app:form_name_text_style="NORMAL"
         app:form_edit_text="抖音"
         app:form_edit_text_style="BOLD"
-        app:form_edit_input_type="TYPE_CLASS_PHONE"
+        app:form_edit_paddingTop="14dp"
         app:form_bottom_line_margin_start="15dp" />
 </LinearLayout>
