FormView支持DataBinding双向绑定

--- a/app/src/main/res/layout/activity_form_view_example.xml
+++ b/app/src/main/res/layout/activity_form_view_example.xml
@@ -1,66 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".example.FormViewExampleActivity">
-    <com.ll.uicomponent.FormView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:form_name="手机号"
-        app:form_edit_hint="请输入手机号"
-        app:form_edit_input_type="TYPE_CLASS_PHONE"
-        />
+    xmlns:tools="http://schemas.android.com/tools">
 
-    <com.ll.uicomponent.FormView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:form_name="    人数"
-        app:form_edit_hint="请输入人数"
-        app:form_unit="人"
-        app:form_edit_input_type="TYPE_CLASS_PHONE"
-        />
+    <data>
 
-    <com.ll.uicomponent.FormView
-        android:id="@+id/choose"
-        android:onClick="onClick"
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:form_name="    地区"
-        app:form_edit_hint="请选择地区"
-        app:form_end_icon="@mipmap/base_ic_arrow_right_gray"
-        app:form_edit_input_type="TYPE_CLASS_PHONE"
-        app:form_edit_input_enable="false"
-        />
+        <variable
+            name="data"
+            type="com.ll.uicomponentexample.example.bean.FormExampleBean" />
+    </data>
 
-    <com.ll.uicomponent.FormView
-        android:layout_marginTop="10dp"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:form_name_marginTop="14dp"
-        app:form_name="推流平台"
-        app:form_name_text_style="NORMAL"
-        app:form_edit_text="抖音"
-        app:form_edit_text_style="BOLD"
-        app:form_edit_paddingTop="14dp"
-        app:form_bottom_line_color="@color/colorAccent" />
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        tools:context=".example.FormViewExampleActivity">
 
-    <com.ll.uicomponent.FormView
-        android:layout_marginTop="10dp"
-        android:layout_width="match_parent"
-        android:layout_height="50dp"
-        app:form_name_marginTop="14dp"
-        app:form_name="推流平台"
-        app:form_name_text_style="NORMAL"
-        app:form_edit_text="抖音"
-        app:form_edit_text_style="BOLD"
-        app:form_edit_paddingTop="14dp"
-        android:paddingStart="15dp"
-        app:form_bottom_line_startToStart_edit="false"
-        app:form_bottom_line_color="@color/colorAccent" />
-</LinearLayout>
+        <com.ll.uicomponent.FormView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            app:form_edit_hint="请输入手机号"
+            app:form_edit_input_type="TYPE_CLASS_PHONE"
+            app:form_name="手机号" />
+
+        <com.ll.uicomponent.FormView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            app:form_edit_hint="请输入人数"
+            app:form_edit_input_type="TYPE_CLASS_PHONE"
+            app:form_name="    人数"
+            app:form_unit="人" />
+
+        <com.ll.uicomponent.FormView
+            android:id="@+id/choose"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:onClick="onClick"
+            app:form_edit_hint="请选择地区"
+            app:form_edit_input_enable="false"
+            app:form_edit_input_type="TYPE_CLASS_PHONE"
+            app:form_end_icon="@mipmap/base_ic_arrow_right_gray"
+            app:form_name="    地区" />
+
+        <com.ll.uicomponent.FormView
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            app:form_bottom_line_color="@color/colorAccent"
+            app:form_edit_paddingTop="14dp"
+            app:form_edit_text="抖音"
+            app:form_edit_text_style="BOLD"
+            app:form_name="推流平台"
+            app:form_name_marginTop="14dp"
+            app:form_name_text_style="NORMAL" />
+
+        <com.ll.uicomponent.FormView
+            android:id="@+id/lastForm"
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:layout_marginTop="10dp"
+            android:paddingStart="15dp"
+            app:form_bottom_line_color="@color/colorAccent"
+            app:form_bottom_line_startToStart_edit="false"
+            app:form_edit_paddingTop="14dp"
+            app:form_edit_text='@={data.name}'
+            app:form_edit_text_style="BOLD"
+            app:form_name="推流平台"
+            app:form_name_marginTop="14dp"
+            app:form_name_text_style="NORMAL" />
+    </LinearLayout>
+</layout>
