--- a/app/src/main/res/layout/activity_clear_edit_view_example.xml
+++ b/app/src/main/res/layout/activity_clear_edit_view_example.xml
@@ -34,13 +34,14 @@
 
     <com.ll.uicomponent.ClearEditTextView
         android:layout_width="match_parent"
-        android:layout_height="44dp"
+        android:layout_height="31dp"
         android:layout_marginTop="10dp"
-        android:drawablePadding="10dp"
         android:hint="ClearEditTextView"
         android:paddingStart="10dp"
         android:paddingEnd="10dp"
         app:searchBgShapeRadius="20dp"
+        android:textSize="14dp"
+        android:drawablePadding="10dp"
         app:searchBgShapeSolidColor="#F6F6F6"
         app:searchBgShapeStrokeColor="@color/colorAccent"
         app:searchBgShapeStrokeWidth="1dp" />
