--- a/uicomponent/src/main/res/layout/library_layout_form.xml
+++ b/uicomponent/src/main/res/layout/library_layout_form.xml
@@ -49,7 +49,7 @@
         android:id="@+id/tv_unit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="张"
+        android:text=""
         android:textColor="#ff333333"
         android:textSize="14sp"
         android:textStyle="bold"
