FormView增加支持动态设置是否可输入的方法

--- a/app/src/main/res/layout/activity_form_view_example.xml
+++ b/app/src/main/res/layout/activity_form_view_example.xml
@@ -48,6 +48,7 @@
             app:form_name="    地区" />
 
         <com.ll.uicomponent.FormView
+            android:id="@+id/tiktok"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginTop="10dp"
